-Added ScreenAttribute behavior which transforms a POCO into an IScreen and forwards method calls to proxied type. Forwarded methods can have injectable args and IResult/IEnumerable<IResult> return values.
-Implemented sub-property binding conventions.
-Implemented sub-property action conventions.
-Enabled the WPF message parser to now bind action parameters for elements using a default binding.

V1.1 Release
-Fixed an issue in the WPF version of InteractionNode.
-Fixed an event invocation order issue and a parameter update issue related to routed messages.
-Updated Spring.NET to version 1.3.0.
-Made DefaultWindowManager more friendly to WPF's NavigationWindow.
-Fixed a bug with non-modal window shutdown in DefaultWindowManager.

V1.1 Release Candidate
-Added pre-initialization hooks to CaliburnApplication via Marco Amendola's patch.
-Redesign of IThreadPool.  AsynchronousAction will now pass itself as state when enqueing the background task.
-Closed ticket #4672 by making PropertyChangedBase.PropertyChanged virtual.
-Applied jagregory's patch to add single key gestures to WPF and Caliburn.
-Applied marcoamendola's patch for enabling property path syntax with Preview and Dependency attributes. So you can now do things like [Dependencies("Model.IsValid")].
-Applied marcoamendola's patch enabling type hinting for polymorphic databinding in Caliburn.Testability.
-Applied etobi's patch to greatly improve Caliburn's parameter parsing in ActionMessages and CommandMessages. See http://caliburn.codeplex.com/WorkItem/View.aspx?WorkItemId=4644 for an explanation.
-Closed ticket #4826. DefaultWindowManager now sets WindowStartupLocation to CenterOwner for UserControls hosted in windows. Title was enhanced to databind to IPresenter.DisplayName if model implements this interface.
-Closed ticket #4833. Fixed an issue with ViewMetadata and invalid Windows in DefaultViewStrategy.