@@ -7,18 +7,19 @@
     using Microsoft.Practices.Composite.Regions;
     using Microsoft.Practices.ServiceLocation;
     using ViewModels;
+    using Caliburn.PresentationFramework.ViewModels;
 
     public class CalculatorModule : IModule
     {
         private readonly IServiceLocator _serviceLocator;
         private readonly IRegionManager _regionManager;
-        private readonly IBinder _binder;
-        private readonly IViewStrategy _viewStrategy;
+        private readonly IViewModelBinder _binder;
+        private readonly IViewLocator _viewStrategy;
 
         public CalculatorModule(IServiceLocator serviceLocator,
                                 IRegionManager regionManager,
-                                IBinder binder,
-                                IViewStrategy viewStrategy
+                                IViewModelBinder binder,
+                                IViewLocator viewStrategy
             )
         {
             _serviceLocator = serviceLocator;
@@ -31,7 +32,7 @@
         {
 
             var model = _serviceLocator.GetInstance<ICalculatorViewModel>();
-            var view = _viewStrategy.GetView(model, null, null) as UserControl;
+            var view = _viewStrategy.Locate(model, null, null);
 
             _binder.Bind(model, view, null);
 
