@@ -1,6 +1,7 @@
 ﻿namespace FluentConfig.Shell.Presenters
 {
     using Caliburn.PresentationFramework.ApplicationModel;
+    using Caliburn.PresentationFramework.Screens;
 
-    public class ShellPresenter : MultiPresenter, IShellPresenter {}
+    public class ShellPresenter : ScreenConductor<ScreenBase>, IShellPresenter {}
 }
